--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="zero.css">
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-		<title>Golden</title>
+		<title>Golden Landing Page</title>
 	</head>
 	<body>
 		<div id="container">
@@ -28,7 +28,6 @@
 						<h1>it's nice to meet you</h1>
 						<button class="bigButton">tell me more</button>
 					</section>	
-
 				</div>
 			</header>
 			<section class="services">
@@ -114,7 +113,7 @@
 				<div class="wrapper">
 					<div class="container">
 						<div class="row">
-							<div class="col-12 col-s-12">
+							<div class="col-12 col-s-12 ">
 								<h2>About Us</h2>
 								<p class="paragraph">Proin iaculis purus consequat sem cure.</p>
 							</div>
@@ -205,24 +204,24 @@
 								<div class="picture1 worker"></div>
 								<p class="name">Kimberly Thompson</p>
 								<p class="role">Marketer</p>
-								<i class="fa fa-twitter" aria-hidden="true"></i>
-								<i class="fa fa-facebook" aria-hidden="true"></i>
-								<i class="fa fa-pinterest-p" aria-hidden="true"></i>
+								<a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+								<a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+								<a href="#"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a>
 							</div>
 							<div class="col-4 col-s-12">
 								<div class="picture2 worker"></div>
 								<p class="name">Rico Massimo</p>
 								<p class="role">Coder</p>
-								<i class="fa fa-twitter" aria-hidden="true"></i>
-								<i class="fa fa-facebook" aria-hidden="true"></i>
-								<i class="fa fa-google-plus" aria-hidden="true"></i>
+								<a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+								<a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+								<a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
 							</div>
 							<div class="col-4 col-s-12">
 								<div class="picture3 worker"></div>
 								<p class="name">Uku Mason</p>
 								<p class="role">Graphic Designer</p>
-								<i class="fa fa-facebook" aria-hidden="true"></i>
-								<i class="fa fa-pinterest-p" aria-hidden="true"></i>
+								<a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+								<a href="#"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a>
 							</div>
 						</div>
 						<div class="row">
